# Genesis

./: .coverage  .gitignore  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FOUNDATION_TRAINING.md  INTEGRATION_ARCHITECTURE.txt  LICENSE  README.md  SECURITY_REQUIREMENTS.md  STEP1_DELIVERABLES.txt  WHITEPAPER.md  batch_queries.sh  build.rs  build.sh  build_gpu_pipeline.sh  compile_shaders.sh  genesis.py  monitor_and_query.sh  process_all_foundation.sh  requirements.txt  run_foundation_queries_when_ready.sh  start_visualization.sh
docs/: FFT_ARCHITECTURE_SPEC.md
examples/: demo_memory_integration.py
outputs/: identity_branch_manager_test.py  test_taylor_integration.py
scripts/: README.md  fine_tune_params.py  migrate_pickles.py
shaders/: epsilon_preservation.comp  fft.comp  gamma_revelation.comp  iota_abstraction.comp  iota_instantiation.comp  memory_average.comp  tau_expansion.comp
src/: clustering.py  clustering_core.py  integration_example.py  lib.rs  origin.py  proto_identity.py  spinor_integration_example.py
tests/: QA_DEPLOYMENT_APPROVED.md  QA_FINAL_VERDICT.txt  QA_LOSSLESS_TEXT_ENCODING.md  test_attack_scenarios.py  test_chunking_performance.py  test_cli_multimodal.py  test_component_clustering.py  test_component_decoding.py  test_component_entropy.py  test_component_retrieval.py  test_core_infrastructure.py  test_cross_modal_phase_locking.py  test_e2e_memory_integration.py  test_entropy_ab.py  test_entropy_minimal.py  test_experiential_reflector.py  test_feedback_reset.py  test_fft_roundtrip.py  (+34 more)
ui/: README.md  (+6 more)
(+213 files in other folders)
