[package]
name = "genesis"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Project"]
description = "Categorical type system for Genesis Instantiation Principle"

[lib]
name = "genesis"
crate-type = ["cdylib", "rlib"]  # Build both dynamic library (.so) and Rust library

[dependencies]
# Error handling for GPU operations
thiserror = { version = "1.0", optional = true }
# Random number generation for Bayesian sampling
rand = "0.8"

[dev-dependencies]
# Testing dependencies only

[build-dependencies]
cc = "1.0"

[features]
default = []
gpu = ["thiserror"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1